@@ -1,18 +1,7 @@
 package galyleo.kernel;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import galyleo.io.PrintStreamBuffer;
-import galyleo.server.Channel;
-import galyleo.server.Connection;
-import galyleo.server.Dispatcher;
-import galyleo.server.Message;
 import galyleo.server.Server;
 import galyleo.shell.Java;
-import java.io.ByteArrayInputStream;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.util.concurrent.atomic.AtomicInteger;
 import javax.annotation.PostConstruct;
 import javax.annotation.PreDestroy;
 import javax.inject.Named;
@@ -23,7 +12,6 @@ import lombok.extern.log4j.Log4j2;
 import org.springframework.boot.ApplicationArguments;
 import org.springframework.boot.ApplicationRunner;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.zeromq.ZMQ;
 
 /**
  * Galyleo Jupyter {@link Kernel}.
@@ -35,29 +23,19 @@ import org.zeromq.ZMQ;
 @SpringBootApplication
 @NoArgsConstructor @ToString @Log4j2
 public class Kernel extends Server implements ApplicationRunner {
-    private final Channel.Heartbeat heartbeat = new Channel.Heartbeat(this);
-    private final Channel.Control control = new Control();
-    private final Channel.IOPub iopub = new Channel.IOPub(this);
-    private final Channel.Stdin stdin = new Stdin();
-    private final Channel.Shell shell = new Shell();
-    private final AtomicInteger execution_count = new AtomicInteger(0);
-    private InputStream in = null;
-    private PrintStreamBuffer out = null;
-    private PrintStreamBuffer err = null;
     private final Java java = new Java();
 
     @PostConstruct
-    public void init() { restart(); }
+    public void init() throws Exception { restart(); }
 
     @PreDestroy
     public void destroy() { shutdown(); }
 
-    private void restart() {
-        in = new ByteArrayInputStream(new byte[] { });
-        out = new PrintStreamBuffer();
-        err = new PrintStreamBuffer();
+    @Override
+    protected void restart() throws Exception {
+        super.restart();
 
-        java.restart(in, out, err);
+        java.restart(getIn(), getOut(), getErr());
 
         setSession(String.join("-",
                                Kernel.class.getCanonicalName(),
@@ -65,35 +43,23 @@ public class Kernel extends Server implements ApplicationRunner {
                                String.valueOf(java.restarts())));
     }
 
-    /**
-     * Add a connection specified by a {@link Connection} {@link File}.
-     *
-     * @param   path            The path to the {@link Connection}
-     *                          {@link File}.
-     *
-     * @throws  IOException     If the {@link File} cannot be opened or
-     *                          parsed.
-     */
-    public void bind(String path) throws IOException {
-        bind(OBJECT_MAPPER.readTree(new File(path)));
+    @Override
+    protected void execute(String code) throws Exception {
+        java.execute(code);
     }
 
-    /**
-     * Add a connection specified by a {@link JsonNode}.
-     *
-     * @param   node            The {@link JsonNode} descibing the
-     *                          {@link Connection}.
-     *
-     * @throws  IOException     If the {@link JsonNode} cannot be parsed or
-     *                          if the {@link Connection} cannot be
-     *                          established.
-     */
-    public void bind(JsonNode node) throws IOException {
-        var connection = new Connection(node);
+    @Override
+    protected String evaluate(String expression) throws Exception {
+        return java.evaluate(expression);
+    }
 
-        connection.connect(shell, control, iopub, stdin, heartbeat);
+    @Override
+    protected void interrupt() {
+        var java = this.java;
 
-        log.info("Listening to {}", connection);
+        if (java != null) {
+            java.stop();
+        }
     }
 
     @Override
@@ -110,199 +76,6 @@ public class Kernel extends Server implements ApplicationRunner {
             }
         } else {
             throw new IllegalArgumentException("No connection file specified");
-        }
-    }
-
-    @ToString
-    private class Control extends Channel.Control {
-        public Control() { super(Kernel.this); }
-
-        @Override
-        protected void dispatch(Dispatcher dispatcher, ZMQ.Socket socket, Message message) {
-            if (message.isRequest()) {
-                super.dispatch(dispatcher, socket, message);
-            } else {
-                log.warn("Ignoring non-request {}", message.msg_type());
-            }
-        }
-
-        private void shutdown(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var restart = request.content().at("/restart").asBoolean();
-
-            if (restart) {
-                Kernel.this.restart();
-            } else {
-                submit(() -> getServer().shutdown());
-            }
-        }
-
-        private void interrupt(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            java.stop();
-        }
-
-        private void debug(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            throw new UnsupportedOperationException();
-        }
-    }
-
-    @ToString
-    private class Stdin extends Channel.Stdin {
-        public Stdin() { super(Kernel.this); }
-
-        @Override
-        protected void dispatch(Dispatcher dispatcher, ZMQ.Socket socket, Message message) {
-            if (message.isReply()) {
-                log.warn("Ignoring {}", message.msg_type());
-            } else {
-                log.warn("Ignoring non-reply {}", message.msg_type());
-            }
-        }
-    }
-
-    @ToString
-    private class Shell extends Channel.Shell {
-        public Shell() {
-            super(Kernel.this, Kernel.this.iopub, Kernel.this.stdin);
-        }
-
-        @Override
-        protected void dispatch(Dispatcher dispatcher, ZMQ.Socket socket, Message message) {
-            if (message.isRequest()) {
-                super.dispatch(dispatcher, socket, message);
-            } else {
-                log.warn("Ignoring non-request {}", message.msg_type());
-            }
-        }
-
-        private void kernel_info(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var content = reply.content();
-
-            content.put("protocol_version", PROTOCOL_VERSION);
-            content.put("implementation", "galyleo");
-            content.put("implementation_version", "1.0.0");
-
-            var language_info = content.with("language_info");
-
-            language_info.put("name", "java");
-            language_info.put("version", System.getProperty("java.version"));
-            language_info.put("mimetype", "text/plain");
-            language_info.put("file_extension", ".java");
-
-            content.set("language_info", language_info);
-
-            var help_links = content.with("help_links");
-        }
-
-        private void execute(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var code = request.content().at("/code").asText();
-            var silent = request.content().at("/silent").asBoolean();
-            var store_history = request.content().at("/store_history").asBoolean();
-            var user_expressions = request.content().at("/user_expressions");
-            var allow_stdin = request.content().at("/allow_stdin").asBoolean();
-            var stop_on_error = request.content().at("/stop_on_error").asBoolean();
-
-            try {
-                if (! code.isEmpty()) {
-                    if (! silent) {
-                        if (store_history) {
-                            execution_count.incrementAndGet();
-
-                            iopub.pub(request.execute_input(code, execution_count.intValue()));
-                        }
-                    }
-
-                    java.execute(code);
-                }
-            } catch (Throwable throwable) {
-                reply.status(throwable, code);
-            } finally {
-                reply.content().put("execution_count", execution_count.intValue());
-
-                if (reply.content().get("status").asText().equals("ok")) {
-                    reply.content().withArray("payload");
-
-                    var in = request.content().at("/user_expressions");
-                    var iterator = in.fields();
-                    var out = reply.content().with("user_expressions");
-
-                    while (iterator.hasNext()) {
-                        var entry = iterator.next();
-                        var name = entry.getKey();
-                        var expression = entry.getValue().asText();
-
-                        try {
-                            out.put(name, String.valueOf(java.evaluate(expression)));
-                        } catch (Throwable throwable) {
-                            out.set(name, Message.toStatus(throwable, expression));
-                        }
-                    }
-                }
-
-                var stdout = out.toString();
-                var stderr = err.toString();
-
-                out.reset();
-                err.reset();
-
-                if (! silent) {
-                    var execute_result = request.execute_result(execution_count.intValue(), stdout);
-
-                    stdout = "";
-
-                    iopub.pub(execute_result);
-
-                    if (! stdout.isEmpty()) {
-                        iopub.pub(request.stream(Message.stream.stdout, stdout));
-                    }
-
-                    if (! stderr.isEmpty()) {
-                        iopub.pub(request.stream(Message.stream.stderr, stderr));
-                    }
-                }
-            }
-        }
-
-        private void inspect(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var code = request.content().at("/code").asText();
-            var cursor_pos = request.content().at("/cursor_pos").asInt();
-            var detail_level = request.content().at("/detail_level").asInt();
-
-            throw new UnsupportedOperationException();
-        }
-
-        private void complete(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var code = request.content().at("/code").asText();
-            var cursor_pos = request.content().at("/cursor_pos").asInt();
-
-            throw new UnsupportedOperationException();
-        }
-
-        private void history(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var output = request.content().at("/output").asBoolean();
-            var raw = request.content().at("/raw").asBoolean();
-            var hist_access_type = request.content().at("/hist_access_type").asText();
-            var session = request.content().at("/session").asInt();
-            var start = request.content().at("/start").asInt();
-            var stop = request.content().at("/stop").asInt();
-            var n = request.content().at("/n").asInt();
-            var pattern = request.content().at("/pattern").asText();
-            var unique = request.content().at("/unique").asBoolean();
-
-            throw new UnsupportedOperationException();
-        }
-
-        private void is_complete(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            var code = request.content().at("/code");
-
-            reply.content().put("status", "unknown");
-        }
-
-        private void connect(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            throw new UnsupportedOperationException();
-        }
-
-        private void comm_info(Dispatcher dispatcher, Message request, Message reply) throws Exception {
-            throw new UnsupportedOperationException();
         }
     }
 }
